RDSSecurityGroupTemplate.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Common RDS Security Groups",
    "Parameters": {
        "SecurityGroupName": {
            "Description": "RDS DB Security Group Name",
            "Type": "String"
        },
        "SecurityGroupDescription": {
            "Description": "RDS DB Security Group Description",
            "Type": "String"
        },
        "VpcId": {
            "Description": "The VPC Id",
            "Type": "String"
        },
        "ApplicationId": {
            "Description": "The Application ID ex APXXXXX",
            "AllowedPattern": "^((AP|IN)\\d{6})$",
            "Type": "String",
            "ConstraintDescription": "Application ID must be Caps AP+6 digits or Caps IN+6 digits, no spaces"
        },
        "ApplicationName": {
            "Type": "String",
            "Description": "The Application Name as per Service Now",
            "MaxLength": "100",
            "MinLength": "5"
        },
        "CreatedBy": {
            "Type": "String",
            "Description": "Corporate UserID or Service Account ID that is deploying the specific resource",
            "AllowedPattern": "^(a\\d{6}|srvAP\\d{6}\\w{3,8})$",
            "ConstraintDescription": "Created by must be lower case a+6 digits, no spaces, or Service Account ID obtained from MyAccess"
        },
        "Environment": {
            "Type": "String",
            "Description": "Environment to which the resource was deployed",
            "AllowedValues": [ "dev", "dit", "sit", "uat", "prod", "dr", "blueuat", "greenprod", "blueprod" ],
            "ConstraintDescription": "Environment must be one of the available values."
        },
        "Organization": {
            "Type": "String",
            "Description": "Business Unit that owns the application",
            "AllowedValues": [ "CTG", "ECC", "ECS", "PI", "FI" ],
            "ConstraintDescription": "Organization must be one of the available values."
        },
        "TimeStamp": {
            "Type": "String",
            "Description": "The Date and Time the AWS resource was created in Format :: YYYY-MM-DD HH:MM:SS",
            "AllowedPattern": "^\\d{4}(-\\d{2}){2}T(\\d{2}:){2}\\d{2}Z$",
            "ConstraintDescription": "Date and Time of creation format must be YYYY-MM-DD HH:MM:SS"
        },
        "CostCenter": {
            "Type": "String",
            "Description": "Business Cost Center for the Application",
            "AllowedPattern": "^(\\d{5})$",
            "ConstraintDescription": "Cost Center must be 5 digit number"
        },
        "Owner": {
            "Type": "String",
            "Description": "Owner of this AWS resource. May or may not be the same as Created By Field."
        },
        "ResourceTag": {
            "Type": "String",
            "Description": "Standard resource tag your role owns"
        }
    },
    "Resources": {
        "RDSSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": { "Ref": "SecurityGroupName" },
                "GroupDescription": { "Ref": "SecurityGroupDescription" },
                "VpcId": { "Ref": "VpcId" },
                "Tags": [
                    { "Key": "Name", "Value": { "Ref": "SecurityGroupName" } },
                    { "Key": "StackName", "Value": { "Ref": "AWS::StackName" } },
                    { "Key": "ApplicationId", "Value": { "Ref": "ApplicationId" } },
                    { "Key": "CreatedBy", "Value": { "Ref": "CreatedBy" } },
                    { "Key": "Owner", "Value": { "Ref": "Owner" } },
                    { "Key": "ApplicationName", "Value": { "Ref": "ApplicationName" } },
                    { "Key": "Description", "Value": { "Ref": "SecurityGroupDescription" } },
                    { "Key": "Environment", "Value": { "Ref": "Environment" } },
                    { "Key": "TimeStamp", "Value": { "Ref": "TimeStamp" } },
                    { "Key": "CostCenter", "Value": { "Ref": "CostCenter" } },
                    { "Key": "dev-rs-tag", "Value": { "Ref": "ResourceTag" } },
                    { "Key": "Organization", "Value": { "Ref": "Organization" } }
                ],
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "Description": "No Egress",
                        "IpProtocol": "-1"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "10.0.0.0/8",
                        "Description": "MySql/Aurora",
                        "IpProtocol": "TCP",
                        "FromPort": 3306,
                        "ToPort": 3306
                    },
                    {
                        "CidrIp": "10.0.0.0/8",
                        "Description": "PostgreSQL Database",
                        "IpProtocol": "TCP",
                        "FromPort": 5432,
                        "ToPort": 5432
                    },
                    {
                        "CidrIp": "10.0.0.0/8",
                        "Description": "Oracle Database",
                        "IpProtocol": "TCP",
                        "FromPort": 1521,
                        "ToPort": 1521
                    },
                    {
                        "CidrIp": "10.0.0.0/8",
                        "Description": "SQLServer Database",
                        "IpProtocol": "TCP",
                        "FromPort": 1433,
                        "ToPort": 1433
                    }
                ]
            }
        }
    }
}
